ACA-51 - Address code review comments from PR #94